ToTopPage button fix on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,15 @@
   font-family: 'Nunito', sans-serif;
 }
 .top-button{
+  width: 40px;
   margin-right: 1em;
   margin-bottom: 1em;
+}
+@media only screen and (max-width: 600px) {
+  .top-button{
+    width: 20px;
+    margin: 0;
+  }
 }
 .App-logo {
   height: 40vmin;
